2007-07-19 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fix bug that made copying fail in some cases 
	* Fix bug in parse_and_bind, reported by Michael Graz.
	* Change version string to 1.5.svn
	
2007-05-29 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Increasing version number to 1.4.4
	* Fixing typo in changelog
	
2007-05-29 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixing bug in copy_selection_to_clipboard. Didn't work
	  when selection started at beginning of line

2007-05-24 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Additions to manual

2007-05-14 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixing pageup pagedown scrolling of window
	* Begining work on killring. ctrl-k ctrl-y will not use clipboard anymore

2007-05-14 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* pre_inputhook and startup_hook were not functioning properly.

2007-05-09 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fix ticket #153, python2.3 installation problem
	* Updates to documentation

2007-04-20 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Change in how Ironpython proagates keyboardinterrupts in console. Still
	  some issues to resolve to get same traceback as for plain ironpython when 
	  pressing ctrl-c.
	
2007-04-18 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Removing some test methods that should not have been comitted at rev 2246
	
2007-04-17 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* When allowing to bind ctrl-c we now issue a KeyBoardInterrupt if
	  control-c is pressed twice within ctrl_c_tap_time_interval which
	  is defaulted to 0.3 s and can be set from the configfile.
	
2007-04-16 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* doctest imports pdb which imports readline, this means readline
	  can be imported when a dummy object has replaced stdout. The dummy 
	  might miss the encoding property. We now assume stdout.encoding=="ascii" 